Import into kv-perf